--- a/docker-compose.sonarqube.yaml
+++ b/docker-compose.sonarqube.yaml
@@ -2,7 +2,8 @@ version: '3.7'
 services:
   web:
     depends_on:
-      - sonarqube
+      sonarqube:
+        condition: service_healthy
     environment:
       - "SONAR_PROJECT_KEY=product-service"
       - "SONAR_PROJECT_NAME=ProductService"
@@ -10,6 +11,12 @@ services:
       - "SONAR_PASSWORD=admin"
       - "SONAR_URI=http://sonarqube:9000"
     command: "tail /dev/null -f"
+    healthcheck:
+      test: exit 0
+      interval: 60s
+      retries: 5
+      start_period: 20s
+      timeout: 10s
   sonarqube:
     domainname: app
     container_name: sonarqube
@@ -17,5 +24,15 @@ services:
       context: sonarqube
     ports:
       - 9000:9000
+    environment:
+      - "SONAR_LOGIN=admin"
+      - "SONAR_PASSWORD=admin"
+      - "SONAR_URI=http://127.0.0.1:9000"
     volumes:
       - ./sonarqube/sonar-conf:/opt/sonarqube/conf
+    healthcheck:
+      test: /bin/bash /scripts/healthcheck.sh
+      interval: 20s
+      retries: 30
+      start_period: 20s
+      timeout: 10s
