--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,6 +15,7 @@ services:
       - ./app/env/web.dev.env
     volumes:
       - ./app/CleanSolution.sln:/app/CleanSolution.sln
+      - ./app/Makefile:/app/Makefile
       - ./app/scripts:/app/scripts
       - ./app/settings:/app/settings
       - ./app/sonar-report:/app/sonar-report
@@ -23,6 +24,12 @@ services:
       - ./app/test-report:/app/test-report
     ports:
       - 8000:80
+    healthcheck:
+      test: curl --fail http://localhost/healthcheck || exit 1
+      interval: 60s
+      retries: 5
+      start_period: 20s
+      timeout: 10s
     depends_on:
       - wiremock
       - mongodb
