Integration with price card service

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -12,6 +12,7 @@ RUN npm install -g sonar-report
 RUN dotnet tool install --global dotnet-sonarscanner --version 5.5.3
 RUN dotnet tool install --global dotnet-reportgenerator-globaltool
 RUN dotnet tool install --global coverlet.console --version 3.0.3
+RUN dotnet tool install --global Microsoft.dotnet-openapi
 ENV PATH=${PATH}:/root/.dotnet/tools
 
 
