--- a/app/src/AspNetCore.Examples.ProductService.Application/AspNetCore.Examples.ProductService.Application.csproj
+++ b/app/src/AspNetCore.Examples.ProductService.Application/AspNetCore.Examples.ProductService.Application.csproj
@@ -18,6 +18,7 @@
     <ItemGroup>
       <ProjectReference Include="..\AspNetCore.Examples.ProductService.Domain\AspNetCore.Examples.ProductService.Domain.csproj" />
       <ProjectReference Include="..\AspNetCore.Examples.ProductService.Infrastructure.Abstractions\AspNetCore.Examples.ProductService.Infrastructure.Abstractions.csproj" />
+      <ProjectReference Include="..\AspNetCore.Examples.ProductService.PriceCardService\AspNetCore.Examples.ProductService.PriceCardService.csproj" />
     </ItemGroup>
 
 
