--- a/app/env/web.dev.env
+++ b/app/env/web.dev.env
@@ -3,6 +3,6 @@ SONAR_PROJECT_NAME=ProductService
 SONAR_LOGIN=admin
 SONAR_PASSWORD=admin
 SONAR_URI=http://sonarqube:9000
-MongoDbConfig__ConnectionString=mongodb://mongodb:27017/product-service
-ElasticConfiguration__Uri=http://elasticsearch:9200
+MongoDbConfiguration__ConnectionString=mongodb://mongodb:27017/product-service
 ASPNETCORE_ENVIRONMENT=Development
+PriceCardServiceClientConfiguration__PriceCardServiceBaseUri=http://wiremock:8080/price-card-service
