--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -53,3 +53,9 @@ services:
       - "27017-27019:27017-27019"
     environment:
       - MONGO_INITDB_DATABASE=product-service
+    healthcheck:
+      test: echo 'db.runCommand("ping").ok' | mongo mongo:27017/test --quiet
+      interval: 10s
+      timeout: 10s
+      retries: 5
+      start_period: 20s
