Switched to entity framework, switched to specflow, switched to github actions

--- a/.env
+++ b/.env
@@ -1,2 +1,8 @@
 PROJECT_PATH=src/AspNetCore.Examples.ProductService/AspNetCore.Examples.ProductService.csproj
+SPECS_PROJECT_PATH=test/functional/AspNetCore.Examples.ProductService.Specs
+SPECS_PROJECT_NAME=AspNetCore.Examples.ProductService.Specs.csproj
 DLL_NAME=AspNetCore.Examples.ProductService.dll
+SPECS_DLL_NAME=AspNetCore.Examples.ProductService.Specs.dll
+WEB_PROD_IMAGE_NAME=web-prod
+WEB_DEV_IMAGE_NAME=web-dev
+NET_VERSION=net6.0
