--- a/app/test/unit/AspNetCore.Examples.ProductService.Application.Test/AspNetCore.Examples.ProductService.Application.Test.csproj
+++ b/app/test/unit/AspNetCore.Examples.ProductService.Application.Test/AspNetCore.Examples.ProductService.Application.Test.csproj
@@ -14,6 +14,7 @@
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
         <PackageReference Include="FluentAssertions" Version="6.0.0-alpha0002" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.8" />
         <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.0" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
@@ -21,15 +22,14 @@
         <PackageReference Include="NUnit" Version="3.12.0" />
         <PackageReference Include="NUnit3TestAdapter" Version="3.16.1" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
-        <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.0.0" />
         <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0.0" />
         <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.0.0" />
         <PackageReference Include="Microsoft.Extensions.Options" Version="6.0.0.0" />
-        <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0.0" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\..\..\src\AspNetCore.Examples.ProductService.Application\AspNetCore.Examples.ProductService.Application.csproj" />
+      <ProjectReference Include="..\..\..\src\AspNetCore.Examples.ProductService.Infrastructure\AspNetCore.Examples.ProductService.Infrastructure.csproj" />
     </ItemGroup>
 
 
