--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -13,8 +13,9 @@ RUN dotnet tool install --global dotnet-sonarscanner --version 5.5.3
 RUN dotnet tool install --global dotnet-reportgenerator-globaltool
 RUN dotnet tool install --global coverlet.console --version 3.0.3
 RUN dotnet tool install --global Microsoft.dotnet-openapi
+RUN dotnet tool install --global SpecFlow.Plus.LivingDoc.CLI
+RUN dotnet tool install dotnet-ef -g
 ENV PATH=${PATH}:/root/.dotnet/tools
-
 
 WORKDIR /app
 RUN devNull=$(mkdir sonar-report)
@@ -31,8 +32,11 @@ COPY ./src ./src/
 COPY ./test ./test/
 COPY ./Makefile ./Makefile
 
+RUN apt-get update && apt-get install -y dnsutils curl
+
+RUN dotnet restore --disable-parallel
 ARG PROJECT_PATH
-RUN dotnet publish ${PROJECT_PATH} -c Debug -o out
+RUN dotnet publish ${PROJECT_PATH} -c Release -o out
 
 FROM mcr.microsoft.com/dotnet/aspnet:6.0-bullseye-slim AS prepare-prod-env
 RUN apt-get update && apt-get -y install curl
@@ -49,4 +53,8 @@ FROM build-env as dev
 ARG PROJECT_PATH
 ENV PROJECT_PATH=$PROJECT_PATH
 CMD ["sh", "./scripts/run_dev.sh"]
+
+FROM build-env as functional
+
+CMD ["echo", "shutting down"]
 
