--- a/app/Makefile
+++ b/app/Makefile
@@ -29,7 +29,7 @@ generate_sonar_report:
     		--noSecurityHotspot="true" > ./sonar-report/sonar-report.html
 
 run_unit_tests:
-	dotnet test --settings settings/coverlet.runsettings --logger trx --results-directory "test-results"
+	dotnet test --filter FullyQualifiedName!~.Specs --settings settings/coverlet.runsettings --logger trx --results-directory "test-results"
 	reportgenerator "-reports:test-results/**/*.opencover.xml" "-targetdir:test-report"
 
 start_with_coverlet_watch:
@@ -51,7 +51,7 @@ sonar_scan:
 		/d:sonar.host.url=${SONAR_URI} \
 		/d:sonar.qualitygate.wait=true
 	dotnet build
-	dotnet test --settings settings/coverlet.runsettings --logger trx --results-directory "test-results"
+	dotnet test --filter FullyQualifiedName!~.Specs --settings settings/coverlet.runsettings --logger trx --results-directory "test-results"
 	reportgenerator "-reports:test-results/**/*.opencover.xml" "-targetdir:test-report"
 	dotnet sonarscanner end /d:sonar.login=${SONAR_LOGIN} /d:sonar.password=${SONAR_PASSWORD}
 	exitStatus=$?
@@ -67,3 +67,14 @@ sonar_scan:
 		--noSecurityHotspot="true" > ./sonar-report/sonar-report.html
 	echo "Exit status is ${exitStatus}"
 	exit ${exitStatus}
+
+MIFGRATION_NAME?=DEFAULT_MIGRATION
+add_migration:
+	dotnet ef migrations add $(MIGRATION_NAME) --project ./src/AspNetCore.Examples.ProductService.Infrastructure/AspNetCore.Examples.ProductService.Infrastructure.csproj
+
+update_database:
+	dotnet ef database update --project ./src/AspNetCore.Examples.ProductService.Infrastructure/AspNetCore.Examples.ProductService.Infrastructure.csproj
+
+run_functional_tests:
+	dotnet test ${SPECS_PROJECT_PATH}/${SPECS_PROJECT_NAME}
+	livingdoc test-assembly ${SPECS_PROJECT_PATH}/bin/debug/${NET_VERSION}/${SPECS_DLL_NAME} -t ${SPECS_PROJECT_PATH}/bin/debug/${NET_VERSION}/TestExecution.json --output behavioral-test-results
