--- a/app/env/web.dev.env
+++ b/app/env/web.dev.env
@@ -3,6 +3,6 @@ SONAR_PROJECT_NAME=ProductService
 SONAR_LOGIN=admin
 SONAR_PASSWORD=admin
 SONAR_URI=http://sonarqube:9000
-MongoDbConfiguration__ConnectionString=mongodb://mongodb:27017/product-service
+DATABASE_CONNECTION_STRING=Data Source=sqlserver;Initial Catalog=product-service;Password=@_str0nG-p@ssw0rd!;User ID=sa
 ASPNETCORE_ENVIRONMENT=Development
 PriceCardServiceClientConfiguration__PriceCardServiceBaseUri=http://wiremock:8080/price-card-service
