--- a/app/src/AspNetCore.Examples.ProductService.Application/AspNetCore.Examples.ProductService.Application.csproj
+++ b/app/src/AspNetCore.Examples.ProductService.Application/AspNetCore.Examples.ProductService.Application.csproj
@@ -8,6 +8,7 @@
     <ItemGroup>
       <PackageReference Include="MediatR" Version="9.0.0" />
       <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.8" />
       <PackageReference Include="MongoDB.Driver" Version="2.12.0" />
       <PackageReference Include="MongoDB.Driver.Core" Version="2.12.0" />
       <PackageReference Include="OneOf" Version="3.0.178" />
