--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -24,26 +24,26 @@ jobs:
         run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login --username ${{ secrets.DOCKER_USERNAME }} --password-stdin
         
       - name: Build and tag
-        run: make build_and_tag docker_username=${{ secrets.DOCKER_USERNAME }} version=${{github.run_number}}
+        run: make build_and_tag docker_username=${{ secrets.DOCKER_USERNAME }} version=alpha-${{github.run_number}}
         
       - name: Start sonar scan
-        run: make start_sonar_scan_ci docker_username=${{ secrets.DOCKER_USERNAME }} version=${{github.run_number}}
+        run: make start_sonar_scan_ci docker_username=${{ secrets.DOCKER_USERNAME }} version=alpha-${{github.run_number}}
         
       - name: Run unit tests
-        run: make run_unit_tests_ci docker_username=${{ secrets.DOCKER_USERNAME }} version=${{github.run_number}}
+        run: make run_unit_tests_ci docker_username=${{ secrets.DOCKER_USERNAME }} version=alpha-${{github.run_number}}
         
       - name: Run functional tests
-        run: make run_functional_tests_ci docker_username=${{ secrets.DOCKER_USERNAME }} version=${{github.run_number}}
+        run: make run_functional_tests_ci docker_username=${{ secrets.DOCKER_USERNAME }} version=alpha-${{github.run_number}}
 
       - name: End sonar scan
-        run: make end_sonar_scan_ci docker_username=${{ secrets.DOCKER_USERNAME }} version=${{github.run_number}}
+        run: make end_sonar_scan_ci docker_username=${{ secrets.DOCKER_USERNAME }} version=alpha-${{github.run_number}}
         if: ${{ always() }}
         
       - name: Generate sonar report
-        run: make generate_sonar_report docker_username=${{ secrets.DOCKER_USERNAME }} version=${{github.run_number}}
+        run: make generate_sonar_report docker_username=${{ secrets.DOCKER_USERNAME }} version=alpha-${{github.run_number}}
         
       - name: Shut containers down
-        run: make shut_containers_down_ci docker_username=${{ secrets.DOCKER_USERNAME }} version=${{github.run_number}}
+        run: make shut_containers_down_ci docker_username=${{ secrets.DOCKER_USERNAME }} version=alpha-${{github.run_number}}
         
       - name: Push images to artifactory repository
-        run: make push_images docker_username=${{ secrets.DOCKER_USERNAME }} version=${{github.run_number}}
+        run: make push_images docker_username=${{ secrets.DOCKER_USERNAME }} version=alpha-${{github.run_number}}
