--- a/app/Makefile
+++ b/app/Makefile
@@ -76,5 +76,6 @@ update_database:
 	dotnet ef database update --project ./src/AspNetCore.Examples.ProductService.Infrastructure/AspNetCore.Examples.ProductService.Infrastructure.csproj
 
 run_functional_tests:
+	dotnet build ${SPECS_PROJECT_PATH}/${SPECS_PROJECT_NAME}
 	dotnet test ${SPECS_PROJECT_PATH}/${SPECS_PROJECT_NAME}
 	livingdoc test-assembly ${SPECS_PROJECT_PATH}/bin/debug/${NET_VERSION}/${SPECS_DLL_NAME} -t ${SPECS_PROJECT_PATH}/bin/debug/${NET_VERSION}/TestExecution.json --output behavioral-test-results
