--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -20,6 +20,10 @@ jobs:
       - name: Install make
         run: sudo apt-get install -y make
         
+      - name: Use docker layer caching  
+        uses: satackey/action-docker-layer-caching@v0.0.11
+        continue-on-error: true
+        
       - name: Docker login
         run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login --username ${{ secrets.DOCKER_USERNAME }} --password-stdin
         
@@ -38,6 +42,13 @@ jobs:
         
       - name: Run functional tests
         run: make run_functional_tests_dev docker_username=${{ secrets.DOCKER_USERNAME }} version=alpha-${{github.run_number}}
+        
+      - name: Upload functional tests artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: behavioral-test-results
+          path: app/behavioral-test-results
+        if: ${{ always() }}
 
       - name: Shut containers down
         run: make shut_containers_down_ci docker_username=${{ secrets.DOCKER_USERNAME }} version=alpha-${{github.run_number}}
