Added swagger generation

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 PROJECT_PATH=src/AspNetCore.Examples.ProductService/AspNetCore.Examples.ProductService.csproj
+PROJECT_FOLDER_PATH=src/AspNetCore.Examples.ProductService
 SPECS_PROJECT_PATH=test/functional/AspNetCore.Examples.ProductService.Specs
 SPECS_PROJECT_NAME=AspNetCore.Examples.ProductService.Specs.csproj
 DLL_NAME=AspNetCore.Examples.ProductService.dll
