--- a/app/src/AspNetCore.Examples.ProductService/AspNetCore.Examples.ProductService.csproj
+++ b/app/src/AspNetCore.Examples.ProductService/AspNetCore.Examples.ProductService.csproj
@@ -19,7 +19,9 @@
         <PackageReference Include="Serilog.Formatting.Elasticsearch" Version="8.5.0-alpha0003" />
         <PackageReference Include="Serilog.Sinks.Debug" Version="2.0.0" />
         <PackageReference Include="Serilog.Sinks.Elasticsearch" Version="8.5.0-alpha0003" />
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+        <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.4.0" />
+        <PackageReference Include="Swashbuckle.AspNetCore.Yaml" Version="1.0.0" />
     </ItemGroup>
 
     <ItemGroup>
