--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -23,6 +23,7 @@ RUN devNull=$(mkdir sonar-report)
 RUN devNull=$(mkdir test-report)
 RUN devNull=$(mkdir test-results)
 RUN devNull=$(mkdir behavioral-test-results)
+RUN devNull=$(mkdir swagger-output)
 
 FROM prepare-build-env AS build-env
 
@@ -35,7 +36,7 @@ COPY ./Makefile ./Makefile
 
 RUN apt-get update && apt-get install -y dnsutils curl
 
-RUN dotnet restore --disable-parallel
+RUN dotnet restore
 RUN dotnet build
 ARG PROJECT_PATH
 RUN dotnet publish ${PROJECT_PATH} -c Release -o out
