--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -20,18 +20,14 @@ jobs:
       - name: Install make
         run: sudo apt-get install -y make
         
-      - name: Use docker layer caching  
-        uses: satackey/action-docker-layer-caching@v0.0.11
-        continue-on-error: true
-        
       - name: Docker login
         run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login --username ${{ secrets.DOCKER_USERNAME }} --password-stdin
         
       - name: Build and tag
-        run: make build_and_tag save_all_images docker_username=${{ secrets.DOCKER_USERNAME }} version=alpha-${{github.run_number}}
+        run: make build_and_tag docker_username=${{ secrets.DOCKER_USERNAME }} version=alpha-${{github.run_number}}
         
       - name: Run unit tests
-        run: make load_all_images run_unit_tests_dev docker_username=${{ secrets.DOCKER_USERNAME }} version=alpha-${{github.run_number}}
+        run: make run_unit_tests_dev docker_username=${{ secrets.DOCKER_USERNAME }} version=alpha-${{github.run_number}}
         
       - name: Upload unit tests artifact
         uses: actions/upload-artifact@v3
@@ -41,7 +37,7 @@ jobs:
         if: ${{ always() }}
         
       - name: Run functional tests
-        run: make load_all_images run_functional_tests_dev docker_username=${{ secrets.DOCKER_USERNAME }} version=alpha-${{github.run_number}}
+        run: make run_functional_tests_dev docker_username=${{ secrets.DOCKER_USERNAME }} version=alpha-${{github.run_number}}
         
       - name: Upload functional tests artifact
         uses: actions/upload-artifact@v3
@@ -51,7 +47,7 @@ jobs:
         if: ${{ always() }}
         
       - name: Generate swagger
-        run: make load_all_images generate_swagger
+        run: make generate_swagger
 
       - name: Upload swagger artifact
         uses: actions/upload-artifact@v3
@@ -64,4 +60,4 @@ jobs:
         run: make shut_containers_down_ci docker_username=${{ secrets.DOCKER_USERNAME }} version=alpha-${{github.run_number}}
         
       - name: Push images to artifactory repository
-        run: make load_all_images push_images docker_username=${{ secrets.DOCKER_USERNAME }} version=alpha-${{github.run_number}}
+        run: make push_images docker_username=${{ secrets.DOCKER_USERNAME }} version=alpha-${{github.run_number}}
