--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -20,10 +20,6 @@ jobs:
       - name: Install make
         run: sudo apt-get install -y make
         
-      - name: Use docker layer caching  
-        uses: satackey/action-docker-layer-caching@v0.0.11
-        continue-on-error: true
-        
       - name: Docker login
         run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login --username ${{ secrets.DOCKER_USERNAME }} --password-stdin
         
@@ -49,6 +45,16 @@ jobs:
           name: behavioral-test-results
           path: app/behavioral-test-results
         if: ${{ always() }}
+        
+      - name: Generate swagger
+        run: make generate_swagger
+
+      - name: Upload swagger artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: swagger
+          path: app/swagger-output/swagger.yaml
+        if: ${{ always() }}  
 
       - name: Shut containers down
         run: make shut_containers_down_ci docker_username=${{ secrets.DOCKER_USERNAME }} version=alpha-${{github.run_number}}
