--- a/app/src/AspNetCore.Examples.ProductService.Infrastructure/AspNetCore.Examples.ProductService.Infrastructure.csproj
+++ b/app/src/AspNetCore.Examples.ProductService.Infrastructure/AspNetCore.Examples.ProductService.Infrastructure.csproj
@@ -7,6 +7,8 @@
 
     <ItemGroup>
       <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.5.4.34" />
+      <PackageReference Include="Azure.Storage.Queues" Version="12.11.0" />
+      <PackageReference Include="MediatR" Version="9.0.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.8" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.8" />
       <PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0" />
@@ -20,9 +22,11 @@
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
+      <PackageReference Include="ZapMicro.TransactionalOutbox" Version="1.0.0.1" />
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\AspNetCore.Examples.ProductService.Application\AspNetCore.Examples.ProductService.Application.csproj" />
       <ProjectReference Include="..\AspNetCore.Examples.ProductService.Infrastructure.Abstractions\AspNetCore.Examples.ProductService.Infrastructure.Abstractions.csproj" />
     </ItemGroup>
 
