fix: Fixed azure storage queue name

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -30,7 +30,11 @@ COPY ./src ./src/
 COPY ./test ./test/
 COPY ./Makefile ./Makefile
 
-RUN apt-get update && apt-get install -y dnsutils curl
+RUN apt-get update && apt-get install -y dnsutils ca-certificates curl apt-transport-https lsb-release gnupg
+RUN curl -sL https://packages.microsoft.com/keys/microsoft.asc | gpg --dearmor | tee /etc/apt/trusted.gpg.d/microsoft.gpg > /dev/null
+RUN echo "deb [arch=amd64] https://packages.microsoft.com/repos/azure-cli/ $(lsb_release -cs) main" | tee /etc/apt/sources.list.d/azure-cli.list
+RUN apt-get update
+RUN apt-get install azure-cli -y
 
 RUN dotnet restore
 RUN dotnet build
