Feature/register httpclient with polly (#19)
* rafactor: repository base

* refactor: move PriceCardServiceClientFactory to infrastructure level

* refactor: remove custom DefaultHttpClientFactory
refactor: inject PriceCardServiceClient without factory

* test: add test for AddPriceCardService method

* feat: add handler lifetime for HttpClient

* test: fix wrong import

* build: improve docker build caching layer

* fix: fix HttpClient injection in PiceCardServiceClient

* build: remove disable-parallel flag from dotnet restore

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -21,22 +21,35 @@ RUN devNull=$(mkdir test-results)
 RUN devNull=$(mkdir behavioral-test-results)
 RUN devNull=$(mkdir swagger-output)
 
-FROM prepare-build-env AS build-env
-
-COPY ./App.sln ./App.sln
-COPY ./scripts ./scripts/
-COPY ./settings ./settings/
-COPY ./src ./src/
-COPY ./test ./test/
-COPY ./Makefile ./Makefile
-
 RUN apt-get update && apt-get install -y dnsutils ca-certificates curl apt-transport-https lsb-release gnupg
 RUN curl -sL https://packages.microsoft.com/keys/microsoft.asc | gpg --dearmor | tee /etc/apt/trusted.gpg.d/microsoft.gpg > /dev/null
 RUN echo "deb [arch=amd64] https://packages.microsoft.com/repos/azure-cli/ $(lsb_release -cs) main" | tee /etc/apt/sources.list.d/azure-cli.list
 RUN apt-get update
 RUN apt-get install azure-cli -y
 
+FROM prepare-build-env AS restore
+
+COPY ./App.sln ./App.sln
+
+COPY src/*/*.csproj ./
+RUN for file in $(ls *.csproj); do mkdir -p src/${file%.*}/ && mv $file src/${file%.*}/; done
+
+COPY test/unit/*/*.csproj ./
+RUN for file in $(ls *.csproj); do mkdir -p test/unit/${file%.*}/ && mv $file test/unit/${file%.*}/; done
+
+COPY test/functional/*/*.csproj ./
+RUN for file in $(ls *.csproj); do mkdir -p test/functional/${file%.*}/ && mv $file test/functional/${file%.*}/; done
+
 RUN dotnet restore
+
+FROM restore as build-env
+
+COPY ./scripts ./scripts/
+COPY ./settings ./settings/
+COPY ./src ./src/
+COPY ./test ./test/
+COPY ./Makefile ./Makefile
+
 RUN dotnet build
 ARG PROJECT_PATH
 RUN dotnet publish ${PROJECT_PATH} -c Release -o out
