--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -24,14 +24,44 @@ jobs:
         run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login --username ${{ secrets.DOCKER_USERNAME }} --password-stdin
         
       - name: Build and tag
-        run: make build_and_tag docker_username=${{ secrets.DOCKER_USERNAME }} version=alpha-${{github.run_number}}
+        run: make build_and_tag save_all_images docker_username=${{ secrets.DOCKER_USERNAME }} version=alpha-${{github.run_number}}
         
+      - name: Upload images artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: tmp-images
+          path: tmp-images
+        
+  test_and_scan:
+    runs-on: ubuntu-latest
+    needs: [build]
+    steps:
+      - uses: actions/checkout@v3
+      - name: Install docker
+        uses: KengoTODA/actions-setup-docker-compose@main
+        with:
+          version: '1.29.2'
+      - name: Install make
+        run: sudo apt-get install -y make
+
+      - name: Docker login
+        run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login --username ${{ secrets.DOCKER_USERNAME }} --password-stdin
+
+      - name: Download images artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: tmp-images
+          path: tmp-images
+
+      - name: Load images
+        run: make load_all_images docker_username=${{ secrets.DOCKER_USERNAME }} version=alpha-${{github.run_number}}
+
       - name: Start sonar scan
         run: make start_sonar_scan_ci docker_username=${{ secrets.DOCKER_USERNAME }} version=alpha-${{github.run_number}}
-        
+
       - name: Run unit tests
         run: make run_unit_tests_ci docker_username=${{ secrets.DOCKER_USERNAME }} version=alpha-${{github.run_number}}
-        
+
       - name: Upload unit tests artifact
         uses: actions/upload-artifact@v3
         with:
@@ -45,16 +75,71 @@ jobs:
       - name: Shut containers down
         run: make shut_containers_down_ci docker_username=${{ secrets.DOCKER_USERNAME }} version=alpha-${{github.run_number}}
         
+  functional_tests:
+    runs-on: ubuntu-latest
+    needs: [ build ]
+    steps:
+      - uses: actions/checkout@v3
+      - name: Install docker
+        uses: KengoTODA/actions-setup-docker-compose@main
+        with:
+          version: '1.29.2'
+      - name: Install make
+        run: sudo apt-get install -y make
+  
+      - name: Docker login
+        run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login --username ${{ secrets.DOCKER_USERNAME }} --password-stdin
+  
+      - name: Download images artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: tmp-images
+          path: tmp-images
+  
+      - name: Load images
+        run: make load_all_images docker_username=${{ secrets.DOCKER_USERNAME }} version=alpha-${{github.run_number}}
+        
       - name: Run functional tests
         run: make run_functional_tests docker_username=${{ secrets.DOCKER_USERNAME }} version=alpha-${{github.run_number}}
-        
+
       - name: Upload functional tests artifact
         uses: actions/upload-artifact@v3
         with:
           name: behavioral-test-results
           path: app/behavioral-test-results
         if: ${{ always() }}
+
+      - name: Shut containers down
+        run: make shut_containers_down_ci docker_username=${{ secrets.DOCKER_USERNAME }} version=alpha-${{github.run_number}}
+
+
+  generate_swagger:
+    runs-on: ubuntu-latest
+    needs: [ build ]
+    steps:
+      - uses: actions/checkout@v3
+      - name: Install docker
+        uses: KengoTODA/actions-setup-docker-compose@main
+        with:
+          version: '1.29.2'
+      - name: Install make
+        run: sudo apt-get install -y make
+
+      - name: Docker login
+        run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login --username ${{ secrets.DOCKER_USERNAME }} --password-stdin
+
+      - name: Download images artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: tmp-images
+          path: tmp-images
+
+      - name: Load images
+        run: make load_all_images docker_username=${{ secrets.DOCKER_USERNAME }} version=alpha-${{github.run_number}}
         
+      - name: Run functional tests
+        run: make run_functional_tests docker_username=${{ secrets.DOCKER_USERNAME }} version=alpha-${{github.run_number}}
+
       - name: Generate swagger
         run: make generate_swagger
 
@@ -63,10 +148,31 @@ jobs:
         with:
           name: swagger
           path: app/swagger-output/swagger.yaml
-        if: ${{ always() }}  
+        if: ${{ always() }}
 
-      - name: Shut containers down
-        run: make shut_containers_down_ci docker_username=${{ secrets.DOCKER_USERNAME }} version=alpha-${{github.run_number}}
-        
+  push_images:
+    runs-on: ubuntu-latest
+    needs: [ test_and_scan, functional_tests, generate_swagger ]
+    steps:
+      - uses: actions/checkout@v3
+      - name: Install docker
+        uses: KengoTODA/actions-setup-docker-compose@main
+        with:
+          version: '1.29.2'
+      - name: Install make
+        run: sudo apt-get install -y make
+
+      - name: Docker login
+        run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login --username ${{ secrets.DOCKER_USERNAME }} --password-stdin
+
+      - name: Download images artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: tmp-images
+          path: tmp-images
+
+      - name: Load images
+        run: make load_all_images docker_username=${{ secrets.DOCKER_USERNAME }} version=alpha-${{github.run_number}}
+
       - name: Push images to artifactory repository
         run: make push_images docker_username=${{ secrets.DOCKER_USERNAME }} version=alpha-${{github.run_number}}
