build: fix generate swagger job

--- a/app/Makefile
+++ b/app/Makefile
@@ -32,6 +32,7 @@ run_functional_tests:
 	livingdoc test-assembly ${SPECS_PROJECT_PATH}/bin/Debug/${NET_VERSION}/${SPECS_DLL_NAME} -t ${SPECS_PROJECT_PATH}/bin/Debug/${NET_VERSION}/TestExecution.json --output behavioral-test-results
 
 generate_swagger:
+	dotnet build
 	swagger tofile --yaml --host http://localhost:8000 --output swagger-output/swagger.yaml ${PROJECT_FOLDER_PATH}/bin/Debug/net6.0/${DLL_NAME} v1
 
 create_queue:
