--- a/app/src/AspNetCore.Examples.ProductService/AspNetCore.Examples.ProductService.csproj
+++ b/app/src/AspNetCore.Examples.ProductService/AspNetCore.Examples.ProductService.csproj
@@ -7,10 +7,11 @@
     <ItemGroup>
         <PackageReference Include="AutoMapper" Version="10.1.1" />
         <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
-        <PackageReference Include="FluentValidation" Version="10.0.0-preview1" />
+        <PackageReference Include="FluentValidation" Version="11.2.0" />
         <PackageReference Include="FluentValidation.AspNetCore" Version="10.0.0-preview1" />
         <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="10.0.0-preview1" />
         <PackageReference Include="MediatR" Version="9.0.0" />
+        <PackageReference Include="MicroElements.Swashbuckle.FluentValidation" Version="5.7.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
         <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.4.0" />
         <PackageReference Include="Swashbuckle.AspNetCore.Yaml" Version="1.0.0" />
