--- a/app/src/AspNetCore.Examples.ProductService/AspNetCore.Examples.ProductService.csproj
+++ b/app/src/AspNetCore.Examples.ProductService/AspNetCore.Examples.ProductService.csproj
@@ -30,4 +30,10 @@
       </Content>
     </ItemGroup>
 
+    <ItemGroup>
+        <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+            <_Parameter1>$(AssemblyName).Test</_Parameter1>
+        </AssemblyAttribute>
+    </ItemGroup>
+
 </Project>
