--- a/app/src/AspNetCore.Examples.ProductService.Contracts/AspNetCore.Examples.ProductService.Contracts.csproj
+++ b/app/src/AspNetCore.Examples.ProductService.Contracts/AspNetCore.Examples.ProductService.Contracts.csproj
@@ -1,12 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net6.0</TargetFramework>
+        <TargetFramework>net8.0</TargetFramework>
         <RootNamespace>AspNetCore.Examples.ProductService</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="10.0.0-preview1" />
+      <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.8.0" />
     </ItemGroup>
 
 </Project>
