--- a/app/test/functional/AspNetCore.Examples.ProductService.Specs/AspNetCore.Examples.ProductService.Specs.csproj
+++ b/app/test/functional/AspNetCore.Examples.ProductService.Specs/AspNetCore.Examples.ProductService.Specs.csproj
@@ -1,18 +1,23 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net6.0</TargetFramework>
+        <TargetFramework>net8.0</TargetFramework>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="NSwag.ApiDescription.Client" Version="13.0.5" />
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
-        <PackageReference Include="RestEase" Version="1.5.7" />
-        <PackageReference Include="SpecFlow.Plus.LivingDocPlugin" Version="3.9.35" />
-        <PackageReference Include="SpecFlow.NUnit" Version="3.9.22" />
-        <PackageReference Include="nunit" Version="3.13.1" />
-        <PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
-        <PackageReference Include="FluentAssertions" Version="5.10.3" />
+        <PackageReference Include="NSwag.ApiDescription.Client" Version="14.0.0-preview009">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0-preview-23503-02" />
+        <PackageReference Include="RestEase" Version="1.6.4" />
+        <PackageReference Include="SpecFlow.Plus.LivingDocPlugin" Version="3.9.57" />
+        <PackageReference Include="SpecFlow.NUnit" Version="4.0.31-beta" />
+        <PackageReference Include="SpecFlow.Tools.MsBuild.Generation" Version="4.0.31-beta" />
+        <PackageReference Include="SpecFlow" Version="4.0.31-beta" />
+        <PackageReference Include="nunit" Version="4.0.0-beta.1" />
+        <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
+        <PackageReference Include="FluentAssertions" Version="7.0.0-alpha.3" />
     </ItemGroup>
 
     <ItemGroup>
