:zap: ensure app started before functional tests

--- a/app/Makefile
+++ b/app/Makefile
@@ -28,6 +28,7 @@ update_database:
 	dotnet ef database update --project ./src/AspNetCore.Examples.ProductService.Infrastructure/AspNetCore.Examples.ProductService.Infrastructure.csproj
 
 run_functional_tests:
+	curl --retry 5 --retry-max-time 120 ${SUT_BASE_URL}/healthcheck
 	dotnet test ${SPECS_PROJECT_PATH}/${SPECS_PROJECT_NAME}
 
 generate_functional_tests_report:
