:bricks: Upgrade to dotnet 8 (#29)

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,17 +1,16 @@
-FROM mcr.microsoft.com/dotnet/sdk:6.0-bullseye-slim AS prepare-build-env
+FROM mcr.microsoft.com/dotnet/sdk:8.0 as prepare-build-env
 
 #Downloading dependencies
 RUN apt-get update
 RUN apt-get -y install default-jre
 RUN apt-get -y install make procps
 
-RUN dotnet tool install --global dotnet-sonarscanner --version 5.5.3
+RUN dotnet tool install --global dotnet-sonarscanner --version 5.14.0
 RUN dotnet tool install --global dotnet-reportgenerator-globaltool
-RUN dotnet tool install --global coverlet.console --version 3.0.3
-RUN dotnet tool install --global Microsoft.dotnet-openapi --version 6.0.8
+RUN dotnet tool install --global coverlet.console --version 6.0.0
+RUN dotnet tool install --global Microsoft.dotnet-openapi --version 8.0.0-rc.2.23480.2 
 RUN dotnet tool install --global SpecFlow.Plus.LivingDoc.CLI --version 3.9.57
-RUN dotnet tool install --global Swashbuckle.AspNetCore.Cli --version 6.4.0
-RUN dotnet tool install --global dotnet-ef --version 6.0.8
+RUN dotnet tool install --global dotnet-ef --version 8.0.0-rc.2.23480.1
 ENV PATH=${PATH}:/root/.dotnet/tools
 
 WORKDIR /app
@@ -43,7 +42,7 @@ RUN for file in $(ls *.csproj); do mkdir -p test/integration/${file%.*}/ && mv $
 COPY test/functional/*/*.csproj ./
 RUN for file in $(ls *.csproj); do mkdir -p test/functional/${file%.*}/ && mv $file test/functional/${file%.*}/; done
 
-RUN dotnet restore
+RUN dotnet restore --disable-parallel
 
 FROM restore as build-env
 
@@ -57,7 +56,7 @@ RUN dotnet build
 ARG PROJECT_PATH
 RUN dotnet publish ${PROJECT_PATH} -c Release -o out
 
-FROM mcr.microsoft.com/dotnet/aspnet:6.0-bullseye-slim AS prepare-prod-env
+FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS prepare-prod-env
 RUN apt-get update && apt-get -y install curl
 
 FROM prepare-prod-env AS prod
